[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/skills/RainOfArrows.gd" type="Script" id=1]
[ext_resource path="res://assets/misc/agnette_arrow.png" type="Texture" id=2]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( -15, 50, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 180.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 300, 200 )

[node name="RainOfArrows" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -246 )
rotation = 1.5708
scale = Vector2( 5, 5 )
amount = 4
lifetime = 0.4
randomness = 0.25
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["Sword"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
